# GenesisEngineSynthApp

./: .gitignore  CMakeLists.txt  DESIGN.md  LICENSE  README.md
.github/workflows/: build.yml  release.yml
resources/: resources.qrc
src/: AlgorithmWidget.cpp  AlgorithmWidget.h  EnvelopeWidget.cpp  EnvelopeWidget.h  FMPatchEditor.cpp  FMPatchEditor.h  FileFormats.cpp  FileFormats.h  MIDIManager.cpp  MIDIManager.h  MainWindow.cpp  MainWindow.h  OperatorWidget.cpp  OperatorWidget.h  PSGEnvelopeEditor.cpp  PSGEnvelopeEditor.h  PatchBank.cpp  PatchBank.h  PianoKeyboardWidget.cpp  PianoKeyboardWidget.h  SerialManager.cpp  SerialManager.h  TLBarWidget.cpp  TLBarWidget.h  Types.h  main.cpp
